--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 		<meta name="robots" content="index,follow">
-		<meta name="keywords" content="Hao Liu; Wenyan Wu; Tsinghua University; SenseTime Research; WFLW; wider facial landmarks in-the-wild; Face Alignment; Computer Vision; Machine Learning; Multimedia Lab; The Chinese University of Hong Kong; CUHK; 吴文岩; 清华">
+		<meta name="keywords" content="Hao Liu; Assistant Professor, Ph.D. School of Information Engineering, Ningxia University, China >
 		<link rel="author" href="https://wywu.github.io/">
 		<title>Hao Liu's Homepage - CS at Tsinghua University</title>
 		<link rel="stylesheet" href="css/bootstrap.css" />
