--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 										<h6>Learning Reasoning-Decision Networks for Robust Face Alignment</h6><br>
 										<span><b>Hao Liu</b>*, <span>Jiwen Lu, Minghao Guo, Suping Wu and Jie Zhou.<br>
                                 <i>IEEE Transactions on Pattern Analysis and Machine Intelligence(T-PAMI) , 2019.</i><br>
-                                [<a href="">Paper</a>]
+                                [<a href="paper/RDN.pdf">Paper</a>]
                             </span></span>
 									</div>
 								</td>
@@ -124,7 +124,7 @@
 										<h6>Two-Stream Transformer Networks for Video-based Face Alignment</h6><br>
 										<b>Hao Liu</b>,Jiwen Lu, Jianjiang Feng and Jie Zhou.<br>
 										<i> IEEE Transactions on Pattern Analysis and Machine Intelligence(T-PAMI) , 2018.</i><br><br> [
-										<a href="">Paper</a>]
+										<a href="paper/tpami2018.pdf">Paper</a>]
 									</div>
 								</td>
 							</tr>
@@ -138,7 +138,7 @@
 										<h6>Learning Deep Sharable and Structural Detectors for Face Alignment</h6><br>
 										<b>Hao Liu</b>,Jiwen Lu, Jianjiang Feng, and Jie Zhou.<br>
 										<i> IEEE Transactions on Image Processing (T-IP) , 2017.</i> <br><br> [
-										<a href="">Paper</a>]
+										<a href="paper/2017_Learning deep sharable and structural detectors for face alignment.pdf">Paper</a>]
 									</div>
 								</td>
 							</tr>
@@ -151,7 +151,7 @@
 									<div class="pub-info">
 										<h6>Label-Sensitive Deep Metric Learning for Facial Age Estimation</h6><br>
 										<b>Hao Liu</b>,Jiwen Lu, Jianjiang Feng, and Jie Zhou.<br>
-										<i> IEEE Transactions on Information Forensics and Security (T-IFS), 2018.</i> <br><br> [<a href="">Paper</a>]
+										<i> IEEE Transactions on Information Forensics and Security (T-IFS), 2018.</i> <br><br> [<a href="paper/TIFS18.pdf">Paper</a>]
 									</div>
 								</td>
 							</tr>
@@ -164,7 +164,7 @@
 									<div class="pub-info">
 										<h6>Ordinal Deep Learning for Facial Age Estimation</h6><br>
 										<b>Hao Liu</b>,Jiwen Lu, Jianjiang Feng, and Jie Zhou.<br>
-										<i> IEEE Transactions on Circuits and Systems for Video Technology (T-CSVT), 2018.</i> <br><br> [<a href="">Paper</a>]
+										<i> IEEE Transactions on Circuits and Systems for Video Technology (T-CSVT), 2018.</i> <br><br> [<a href="paper/TCSVT2782709.pdf">Paper</a>]
 									</div>
 								</td>
 							</tr>
@@ -178,7 +178,7 @@
 										<h6>Group-Aware Deep Feature Learning for Facial Age Estimation</h6><br>
 										<b>Hao Liu</b>,Jiwen Lu, Jianjiang Feng, and Jie Zhou.<br>
 										<i> Pattern Recognition(PR), 2017.</i> <br><br> 
-										[<a href="">Paper</a>]
+										[<a href="paper/PR17.pdf">Paper</a>]
 									</div>
 								</td>
 							</tr>
@@ -191,7 +191,7 @@
 									<div class="pub-info">
 										<h6>Ordinal Deep Feature Learning for Facial Age Estimation</h6><br>
 										<b>Hao Liu</b>,Jiwen Lu, Jianjiang Feng, and Jie Zhou.<br>
-										<i> IEEE International Conference on Automatic Face and Gesture Recognition (FG), 2017.</i> <br><br> [<a href="">Paper</a>]
+										<i> IEEE International Conference on Automatic Face and Gesture Recognition (FG), 2017.</i> <br><br> [<a href="paper/FG17.pdf">Paper</a>]
 									</div>
 								</td>
 							</tr>
