--- a/index.html
+++ b/index.html
@@ -81,10 +81,8 @@
 							<p> <font size="4" face="Times">Jul. 2007 - Sep. 2011</font>, School of Software Engineering, <font size="4" face="Times">Sichuan University </font></p>
 				          </center>
 				        </div>
-				      </div>
-				    </div>
+				     </div>
 				</div>
-
 				<div id="news">
 					<h2>News</h2>
 					<br>
@@ -208,8 +206,8 @@
 				<div id="teaching">
 					<h2>Selected Honors and Awards</h2>
 					<ul>
-						<li>Doctoral Consortium: “Deep Feature Learning for Facial Age Estimation”, Oral Presentation in FG 2017.</li>
-						<li>Tsinghua National Scholarship, 2017.</li>
+						<li>Excellent Undergraduate Student in TS, 2018</li>
+						<li>Outstanding Master thesis, 2018</li>
 					</ul>
 				</div>
 			</div>
