--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
 				</div>
 
 				<div id="Education ">
-					<h2>Education</h2>
-					<div class="row">
+					<h2 style="margin-bootom:10px">Education</h2>
+					<div class="row" stye="margin-top:20px">
 				        <div class="col-lg-4">
 				          <center>
 				            <img src="img/tsinghua.png"  width="100">
@@ -86,7 +86,7 @@
 				        </div>
 				     </div>
 				</div>
-				<div id="news">
+				<div id="news" style="margin-top:-30px">
 					<h2>News</h2>
 					<br>
 					<ul>
