--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
 
 				<div id="Education ">
 					<h2 style="margin-bootom:10px">Education</h2>
-					<div class="row" stye="margin-top:20px">
+					<p ></p>
+					<div class="row">
 				        <div class="col-lg-4">
 				          <center>
 				            <img src="img/tsinghua.png"  width="100">
@@ -86,7 +87,7 @@
 				        </div>
 				     </div>
 				</div>
-				<div id="news" style="margin-top:-30px">
+				<div id="news">
 					<h2>News</h2>
 					<br>
 					<ul>
