--- a/index.html
+++ b/index.html
@@ -70,19 +70,19 @@
 				        <div class="col-lg-4">
 				          <center>
 				            <img src="img/tsinghua.png"  width="100">
-							<p> <font size="4" face="Times">Sep. 2014 - Jan. 2018</font>, Department of Automation, <font size="4" face="Times">Tsinghua University</font> </p>
+							<p> <font size="4" face="Times">Sep. 2014 - Jan. 2018</font>, Get PhD of Automation, <font size="4" face="Times">Tsinghua University</font> </p>
 				          </center>
 				        </div>
 				        <div class="col-lg-4">
 				          <center>
 				            <img src="img/ucas.jpg"  width="100">
-							<p> <font size="4" face="Times">Sep. 2011 - Jul. 2014</font>, School of Computer Science and Control, <font size="4" face="Times">University of Chinese Academic of Sciences </font></p>
+							<p> <font size="4" face="Times">Sep. 2011 - Jul. 2014</font>, Get Master Degree of Computer Science and Control, <font size="4" face="Times">University of Chinese Academic of Sciences </font></p>
 				          </center>
 				        </div>
 						<div class="col-lg-4">
 				          <center>
 				            <img src="img/scu.jpg"  width="100">
-							<p> <font size="4" face="Times">Jul. 2007 - Sep. 2011</font>, School of Software Engineering, <font size="4" face="Times">Sichuan University </font></p>
+							<p> <font size="4" face="Times">Jul. 2007 - Sep. 2011</font>, Get Undergraduate Degree of Software Engineering, <font size="4" face="Times">Sichuan University </font></p>
 				          </center>
 				        </div>
 				     </div>
