--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
 				<div id="teaching">
 					<h2>Selected Honors and Awards</h2>
 					<ul>
-						<li>Excellent Undergraduate Student in TS, 2018</li>
+						<li>Excellent Undergraduate Student in Tsinghua, 2018</li>
 						<li>Outstanding Master thesis, 2018</li>
 					</ul>
 				</div>
