--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@
 					<h2>News</h2>
 					<br>
 					<ul>
-						<li> Our paper On Facial Age Estimation is accepted to ICME 2019 Oral</li>
+					      <li> Our paper <a href = ""> On Facial Age Estimation </a>is accepted to ICME 2019 Oral</li>
 						<br>
-						<li>Our paper On Face Alignment is accepted to T-PAMI 2019</li>
+						<li>Our paper <a href = "paper/RDN.pdf"> On Face Alignment </a>is accepted to T-PAMI 2019</li>
 						<br>
 					</ul>
 				</div>
