--- a/index.html
+++ b/index.html
@@ -70,19 +70,19 @@
 				        <div class="col-lg-4">
 				          <center>
 				            <img src="img/tsinghua.png"  width="100">
-							<p> <font size="4" face="Times">Sep. 2014 - Jan. 2018</font>, Get PhD of Automation, <font size="4" face="Times">Tsinghua University</font> </p>
+							<p> <font size="4" face="Times">Sep. 2014 - Jan. 2018</font>, PhD of Automation, <font size="4" face="Times">Tsinghua University</font> </p>
 				          </center>
 				        </div>
 				        <div class="col-lg-4">
 				          <center>
 				            <img src="img/ucas.jpg"  width="100">
-							<p> <font size="4" face="Times">Sep. 2011 - Jul. 2014</font>, Get Master Degree of Computer Science and Control, <font size="4" face="Times">University of Chinese Academic of Sciences </font></p>
+							<p> <font size="4" face="Times">Sep. 2011 - Jul. 2014</font>, Master Degree of Computer Science and Control, <font size="4" face="Times">University of Chinese Academic of Sciences </font></p>
 				          </center>
 				        </div>
 						<div class="col-lg-4">
 				          <center>
 				            <img src="img/scu.jpg"  width="100">
-							<p> <font size="4" face="Times">Jul. 2007 - Sep. 2011</font>, Get Undergraduate Degree of Software Engineering, <font size="4" face="Times">Sichuan University </font></p>
+							<p> <font size="4" face="Times">Jul. 2007 - Sep. 2011</font>, Undergraduate Degree of Software Engineering, <font size="4" face="Times">Sichuan University </font></p>
 				          </center>
 				        </div>
 				     </div>
@@ -91,7 +91,7 @@
 					<h2>News</h2>
 					<br>
 					<ul>
-					      <li> Our paper <a href = ""> On Facial Age Estimation </a>is accepted to ICME 2019 Oral</li>
+					      <li> Our paper <a href = "paper/ICME2019.pdf"> On Facial Age Estimation </a>is accepted to ICME 2019 Oral</li>
 						<br>
 						<li>Our paper <a href = "paper/RDN.pdf"> On Face Alignment </a>is accepted to T-PAMI 2019</li>
 						<br>
