--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta name="robots" content="index,follow">
 		<meta name="keywords" content="Hao Liu; Assistant Professor, Ph.D. School of Information Engineering, Ningxia University, China >
 		<link rel="author" href="https://wywu.github.io/">
-		<title>Hao Liu's Homepage - CS at Tsinghua University</title>
+		<title>Hao Liu's Homepage - CS at Ningxia University</title>
 		<link rel="stylesheet" href="css/bootstrap.css" />
 		<link rel="stylesheet" href="js/style.css" type="text/css">
 		
@@ -70,7 +70,7 @@
 				        <div class="col-lg-4">
 				          <center>
 				            <img src="img/tsinghua.png"  width="100">
-							<p> <font size="4" face="Times">Sep. 2014 - Jan. 2018</font>, PhD of Automation, <font size="4" face="Times">Tsinghua University</font> </p>
+							<p> <font size="4" face="Times">Sep. 2014 - Jan. 2018</font>, Ph.D Degree of Automation, <font size="4" face="Times">Tsinghua University</font> </p>
 				          </center>
 				        </div>
 				        <div class="col-lg-4">
@@ -82,7 +82,7 @@
 						<div class="col-lg-4">
 				          <center>
 				            <img src="img/scu.jpg"  width="100">
-							<p> <font size="4" face="Times">Jul. 2007 - Sep. 2011</font>, Undergraduate Degree of Software Engineering, <font size="4" face="Times">Sichuan University </font></p>
+							<p> <font size="4" face="Times">Jul. 2007 - Sep. 2011</font>, Bachelor Degree of Software Engineering, <font size="4" face="Times">Sichuan University </font></p>
 				          </center>
 				        </div>
 				     </div>
@@ -91,9 +91,9 @@
 					<h2>News</h2>
 					<br>
 					<ul>
-					      <li> Our paper <a href = "paper/ICME2019.pdf"> On Facial Age Estimation </a>is accepted to ICME 2019 Oral</li>
+					      <li> Our paper on <a href = "paper/ICME2019.pdf"> Facial Age Estimation </a>is accepted to ICME 2019 (Oral Presentation). </li>
 						<br>
-						<li>Our paper <a href = "paper/RDN.pdf"> On Face Alignment </a>is accepted to T-PAMI 2019</li>
+						<li>Our paper on <a href = "paper/RDN.pdf"> Face Alignment </a>is accepted to T-PAMI 2019 (Regular Paper). </li>
 						<br>
 					</ul>
 				</div>
@@ -102,6 +102,20 @@
 					<h2>Publication</h2>
 					<table class="table-pub">
 						<tbody>
+						        <tr>
+								<td class="col-3">
+									<a href=""><img src="img/ICME2019.png"></a>
+								</td>
+								<td>
+									<div class="pub-info">
+										<h6>Similarity-Aware Deep Adversarial Learning for Facial Age Estimation</h6><br>
+										Penghui Sun, <span><b>Hao Liu</b><span>*, Xin Wang, Zhenhua Yu and Suping Wu.<br>
+                                <i>IEEE International Conference on Multimedia and Expo (ICME), Oral Presentation 2019.</i><br>
+                                [<a href="">Paper</a>]
+                            </span></span>
+									</div>
+								</td>
+							</tr>
 							<tr>
 								<td class="col-3">
 									<a href=""><img src="img/Learning Reasoning-Decision Networks.png"></a>
@@ -109,9 +123,9 @@
 								<td>
 									<div class="pub-info">
 										<h6>Learning Reasoning-Decision Networks for Robust Face Alignment</h6><br>
-										<span><b>Hao Liu</b>*, <span>Jiwen Lu, Minghao Guo, Suping Wu and Jie Zhou.<br>
-                                <i>IEEE Transactions on Pattern Analysis and Machine Intelligence(T-PAMI) , 2019.</i><br>
-                                [<a href="paper/RDN.pdf">Paper</a>]
+										<span><b>Hao Liu</b>, <span>Jiwen Lu*, Minghao Guo, Suping Wu and Jie Zhou.<br>
+                                <i>IEEE Transactions on Pattern Analysis and Machine Intelligence (T-PAMI) , 2019.</i><br>
+                                [<a href="">Paper</a>]
                             </span></span>
 									</div>
 								</td>
@@ -124,8 +138,8 @@
 								<td>
 									<div class="pub-info">
 										<h6>Two-Stream Transformer Networks for Video-based Face Alignment</h6><br>
-										<b>Hao Liu</b>,Jiwen Lu, Jianjiang Feng and Jie Zhou.<br>
-										<i> IEEE Transactions on Pattern Analysis and Machine Intelligence(T-PAMI) , 2018.</i><br><br> [
+										<b>Hao Liu</b>, Jiwen Lu*, Jianjiang Feng and Jie Zhou.<br>
+										<i> IEEE Transactions on Pattern Analysis and Machine Intelligence (T-PAMI) , 2018.</i><br><br> [
 										<a href="paper/tpami2018.pdf">Paper</a>]
 									</div>
 								</td>
@@ -138,7 +152,7 @@
 								<td>
 									<div class="pub-info">
 										<h6>Learning Deep Sharable and Structural Detectors for Face Alignment</h6><br>
-										<b>Hao Liu</b>,Jiwen Lu, Jianjiang Feng, and Jie Zhou.<br>
+										<b>Hao Liu</b>, Jiwen Lu*, Jianjiang Feng, and Jie Zhou.<br>
 										<i> IEEE Transactions on Image Processing (T-IP) , 2017.</i> <br><br> [
 										<a href="paper/2017_Learning deep sharable and structural detectors for face alignment.pdf">Paper</a>]
 									</div>
@@ -152,7 +166,7 @@
 								<td>
 									<div class="pub-info">
 										<h6>Label-Sensitive Deep Metric Learning for Facial Age Estimation</h6><br>
-										<b>Hao Liu</b>,Jiwen Lu, Jianjiang Feng, and Jie Zhou.<br>
+										<b>Hao Liu</b>, Jiwen Lu*, Jianjiang Feng, and Jie Zhou.<br>
 										<i> IEEE Transactions on Information Forensics and Security (T-IFS), 2018.</i> <br><br> [<a href="paper/TIFS18.pdf">Paper</a>]
 									</div>
 								</td>
@@ -165,7 +179,7 @@
 								<td>
 									<div class="pub-info">
 										<h6>Ordinal Deep Learning for Facial Age Estimation</h6><br>
-										<b>Hao Liu</b>,Jiwen Lu, Jianjiang Feng, and Jie Zhou.<br>
+										<b>Hao Liu</b>, Jiwen Lu*, Jianjiang Feng, and Jie Zhou.<br>
 										<i> IEEE Transactions on Circuits and Systems for Video Technology (T-CSVT), 2018.</i> <br><br> [<a href="paper/TCSVT2782709.pdf">Paper</a>]
 									</div>
 								</td>
@@ -178,8 +192,8 @@
 								<td>
 									<div class="pub-info">
 										<h6>Group-Aware Deep Feature Learning for Facial Age Estimation</h6><br>
-										<b>Hao Liu</b>,Jiwen Lu, Jianjiang Feng, and Jie Zhou.<br>
-										<i> Pattern Recognition(PR), 2017.</i> <br><br> 
+										<b>Hao Liu</b>, Jiwen Lu*, Jianjiang Feng, and Jie Zhou.<br>
+										<i> Pattern Recognition (PR), 2017.</i> <br><br> 
 										[<a href="paper/PR17.pdf">Paper</a>]
 									</div>
 								</td>
