--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 						<tbody>
 						        <tr>
 								<td class="col-3">
-									<a href=""><img src="img/ICME2019.png"></a>
+									<a href=""><img src="img/ICME2019.jpg"></a>
 								</td>
 								<td>
 									<div class="pub-info">
