--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
 								<td>
 									<div class="pub-info">
 										<h6>Ordinal Deep Feature Learning for Facial Age Estimation</h6><br>
-										<b>Hao Liu</b>,Jiwen Lu, Jianjiang Feng, and Jie Zhou.<br>
+										<b>Hao Liu</b>, Jiwen Lu*, Jianjiang Feng, and Jie Zhou.<br>
 										<i> IEEE International Conference on Automatic Face and Gesture Recognition (FG), 2017.</i> <br><br> [<a href="paper/FG17.pdf">Paper</a>]
 									</div>
 								</td>
