--- a/index.html
+++ b/index.html
@@ -219,7 +219,8 @@
 					<h2>Selected Honors and Awards</h2>
 					<ul>
 						<li>Excellent Undergraduate Student in Tsinghua, 2018</li>
-						<li>Outstanding Master thesis, 2018</li>
+						<li>Outstanding Master thesis in Tsinghua, 2018</li>
+						<li>National Scholarship in Tsinghua, 2017</li>
 					</ul>
 				</div>
 			</div>
