--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
 					<h2>Selected Honors and Awards</h2>
 					<ul>
 						<li>Excellent Undergraduate Student in Tsinghua, 2018</li>
-						<li>Outstanding Master thesis in Tsinghua, 2018</li>
+						<li>Outstanding Ph.D. Thesis in Tsinghua, 2018</li>
 						<li>National Scholarship in Tsinghua, 2017</li> 
 					</ul>
 				</div>
