--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 										<h6>Similarity-Aware Deep Adversarial Learning for Facial Age Estimation</h6><br>
 										Penghui Sun, <span><b>Hao Liu</b><span>*, Xin Wang, Zhenhua Yu and Suping Wu.<br>
                                 <i>IEEE International Conference on Multimedia and Expo (ICME), Oral Presentation 2019.</i><br>
-                                [<a href="">Paper</a>]
+                                [<a href="">In Press</a>]
                             </span></span>
 									</div>
 								</td>
@@ -125,7 +125,7 @@
 										<h6>Learning Reasoning-Decision Networks for Robust Face Alignment</h6><br>
 										<span><b>Hao Liu</b>, <span>Jiwen Lu*, Minghao Guo, Suping Wu and Jie Zhou.<br>
                                 <i>IEEE Transactions on Pattern Analysis and Machine Intelligence (T-PAMI) , 2019.</i><br>
-                                [<a href="">Paper</a>]
+                                [<a href="">In Press</a>]
                             </span></span>
 									</div>
 								</td>
