--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@
 					<h2>News</h2>
 					<br>
 					<ul>
-					      <li> Our paper on <a href = "paper/ICME2019.pdf"> Facial Age Estimation </a>is accepted to ICME 2019 (Oral Presentation). </li>
+					      <li> Our paper on Facial Age Estimation via Deep Adversarial Learning is accepted to ICME 2019 (Oral Presentation). </li>
 						<br>
-						<li>Our paper on <a href = "paper/RDN.pdf"> Face Alignment </a>is accepted to T-PAMI 2019 (Regular Paper). </li>
+						<li>Our paper on Face Alignment via Deep Reinforcement  is accepted to T-PAMI 2019 (Regular Paper). </li>
 						<br>
 					</ul>
 				</div>
