--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 					<ul>
 					      <li> Our paper on Facial Age Estimation via Deep Adversarial Learning is accepted to ICME 2019 (Oral Presentation). </li>
 						<br>
-						<li>Our paper on Face Alignment via Deep Reinforcement  is accepted to T-PAMI 2019 (Regular Paper). </li>
+						<li>Our paper on Face Alignment via Deep Reinforcement Learning is accepted to T-PAMI 2019 (Regular Paper). </li>
 						<br>
 					</ul>
 				</div>
