--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
 									<span style="line-height:30px;">
 							          <p> <font size="4" face="Times">Hao Liu</font>, Associate Professor, Ph.D. </p>
 							          <p>Address: School of Information Engineering, Ningxia University, China </p>
-							          <p>Birthday: 1988-08</p>
+							          <p>My research is on facial analysis and machine learning, particularly face alignment, facial age estimation and deep learning.</p>
 									  <p>Supervised by:  <a href="http://www.tsinghua.edu.cn/publish/auen/1713/2011/20110506105532098625469/20110506105532098625469_.html">Jie Zhou</a>, <a href="http://ivg.au.tsinghua.edu.cn/Jiwen_Lu/">Jiwen Lu</a></p>
-							          <p>Email: <a href="mailto:hauklau@outlook.com">liuhao@nxu.edu.cn</a></p>
+							          <p>Email: <a href="mailto:liuhao@nxu.edu.cn">liuhao@nxu.edu.cn</a></p>
 							        </span>
 								</td>
 								<td class="col-3">
