--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
 								<td class="col-7">
 									<span style="line-height:30px;">
 							          <p> <font size="4" face="Times">Hao Liu</font>, Associate Professor, Ph.D. </p>
-							          <p>Address: School of Information Engineering, Ningxia University, China </p>
+							          <p>School of Information Engineering, Ningxia University, Yinchuan, China </p>
 							          <p>My research is on facial analysis and machine learning, particularly face alignment, facial age estimation and deep learning.</p>
-									  <p>Supervised by:  <a href="http://www.tsinghua.edu.cn/publish/auen/1713/2011/20110506105532098625469/20110506105532098625469_.html">Jie Zhou</a>, <a href="http://ivg.au.tsinghua.edu.cn/Jiwen_Lu/">Jiwen Lu</a></p>
+									  <p>Ph.D Supervised by Professor <a href="http://www.tsinghua.edu.cn/publish/auen/1713/2011/20110506105532098625469/20110506105532098625469_.html">Jie Zhou</a>, <a href="http://ivg.au.tsinghua.edu.cn/Jiwen_Lu/">Jiwen Lu</a></p>
 							          <p>Email: <a href="mailto:liuhao@nxu.edu.cn">liuhao@nxu.edu.cn</a></p>
 							        </span>
 								</td>
