--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
 							          <p> <font size="4" face="Times">Hao Liu</font>, Associate Professor, Ph.D. </p>
 							          <p>School of Information Engineering, Ningxia University, Yinchuan, China </p>
 							          <p>My research is on facial analysis and machine learning, particularly face alignment, facial age estimation and deep learning.</p>
-									  <p>Ph.D Supervised by Professor <a href="http://www.tsinghua.edu.cn/publish/auen/1713/2011/20110506105532098625469/20110506105532098625469_.html">Jie Zhou</a>, <a href="http://ivg.au.tsinghua.edu.cn/Jiwen_Lu/">Jiwen Lu</a></p>
-							          <p>Email: <a href="mailto:liuhao@nxu.edu.cn">liuhao@nxu.edu.cn</a></p>
+									  <p>Ph.D supervised by Professor <a href="http://www.tsinghua.edu.cn/publish/auen/1713/2011/20110506105532098625469/20110506105532098625469_.html">Jie Zhou</a> and <a href="http://ivg.au.tsinghua.edu.cn/Jiwen_Lu/">Jiwen Lu</a></p>
+							          <p>Email: <a href="mailto:liuhao@nxu.edu.cn">liuhao [at] nxu.edu.cn</a></p>
 							        </span>
 								</td>
 								<td class="col-3">
@@ -91,9 +91,13 @@
 					<h2>News</h2>
 					<br>
 					<ul>
-					      <li> Our paper on Facial Age Estimation via Deep Adversarial Learning is accepted to ICME 2019 (Oral Presentation). </li>
+					      <li>[2019/03/11] Our paper on Facial Age Estimation via Deep Adversarial Learning is accepted to ICME 2019 (Oral Presentation). </li>
 						<br>
-						<li>Our paper on Face Alignment via Deep Reinforcement Learning is accepted to T-PAMI 2019 (Regular Paper). </li>
+						<li>[2018/12/2] Our paper on Face Alignment via Deep Reinforcement Learning is accepted to T-PAMI 2019 (Regular Paper). </li>
+						<br>
+					      <li>[2018/08/20] I give a talk on Deep Metric Learning for Pattern Recognition at the Tutorial of ICPR'18. </li><br>
+					      <li>[2018/05/15] I give a talk on Representation Learning for Face Alignment and Recognition at the Tutorial of FG'18. </li><br>
+					      <li>[2017/10/10] I am honored with the National Scholarship of Tsinghua University. </li>
 						<br>
 					</ul>
 				</div>
