--- a/index.html
+++ b/index.html
@@ -91,11 +91,13 @@
 					<h2>News</h2>
 					<br>
 					<ul>
-					      <li>[2019/03/11] Our paper on Facial Age Estimation via Deep Adversarial Learning is accepted to ICME 2019 (Oral Presentation). </li>
+					      <li>[2019/03/11] One paper on Facial Age Estimation via Deep Adversarial Learning is accepted to ICME 2019 (Oral Presentation). </li>
 						<br>
-						<li>[2018/12/2] Our paper on Face Alignment via Deep Reinforcement Learning is accepted to T-PAMI 2019 (Regular Paper). </li>
+						<li>[2018/12/02] One paper on Face Alignment via Deep Reinforcement Learning is accepted to T-PAMI 2019 (Regular Paper). </li>
 						<br>
 					      <li>[2018/08/20] I give a talk on Deep Metric Learning for Pattern Recognition at the Tutorial of ICPR'18. </li><br>
+					      <li>[2018/07/01] I am honored with the Outstanding Ph.D. Thesis of Tsinghua University. </li>
+						<br>
 					      <li>[2018/05/15] I give a talk on Representation Learning for Face Alignment and Recognition at the Tutorial of FG'18. </li><br>
 					      <li>[2017/10/10] I am honored with the National Scholarship of Tsinghua University. </li>
 						<br>
@@ -222,9 +224,9 @@
 				<div id="teaching">
 					<h2>Selected Honors and Awards</h2>
 					<ul>
-						<li>Excellent Undergraduate Student in Tsinghua, 2018</li>
-						<li>Outstanding Ph.D. Thesis in Tsinghua, 2018</li>
-						<li>National Scholarship in Tsinghua, 2017</li> 
+						<li>Excellent Undergraduate Student of Tsinghua University, 2018</li>
+						<li>Outstanding Ph.D. Thesis of Tsinghua University, 2018</li>
+						<li>National Scholarship of Tsinghua University, 2017</li> 
 					</ul>
 				</div>
 			</div>
