--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta name="robots" content="index,follow">
 		<meta name="keywords" content="Hao Liu; Assistant Professor, Ph.D. School of Information Engineering, Ningxia University, China >
 		<link rel="author" href="https://wywu.github.io/">
-		<title>Hao Liu's Homepage - CS at Ningxia University</title>
+		<title>Hao Liu's Homepage - CV at Ningxia University</title>
 		<link rel="stylesheet" href="css/bootstrap.css" />
 		<link rel="stylesheet" href="js/style.css" type="text/css">
 		
