--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 		<meta name="robots" content="index,follow">
-		<meta name="keywords" content="Hao Liu; Assistant Professor, Ph.D. School of Information Engineering, Ningxia University, China >
+		<meta name="keywords" content="Hao Liu; Ph.D.; Assistant Professor with School of Information Engineering, Ningxia University, China >
 		<link rel="author" href="https://wywu.github.io/">
 		<title>Hao Liu's Homepage - CV at Ningxia University</title>
 		<link rel="stylesheet" href="css/bootstrap.css" />
@@ -48,7 +48,7 @@
 							<tr>
 								<td class="col-7">
 									<span style="line-height:30px;">
-							          <p> <font size="4" face="Times">Hao Liu</font>, Associate Professor, Ph.D. </p>
+							          <p> <font size="4" face="Times">Hao Liu</font>  Ph.D, Associate Professor </p>
 							          <p>School of Information Engineering, Ningxia University, Yinchuan, China </p>
 							          <p>My research is on facial analysis and machine learning, particularly face alignment, facial age estimation and deep learning.</p>
 									  <p>Ph.D supervised by Professor <a href="http://www.tsinghua.edu.cn/publish/auen/1713/2011/20110506105532098625469/20110506105532098625469_.html">Jie Zhou</a> and <a href="http://ivg.au.tsinghua.edu.cn/Jiwen_Lu/">Jiwen Lu</a></p>
