--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 							<tr>
 								<td class="col-7">
 									<span style="line-height:30px;">
-							          <p> <font size="4" face="Times">Hao Liu</font>  Ph.D, Associate Professor </p>
+							          <p> <font size="4" face="Times">Hao Liu</font>,  Ph.D, Associate Professor </p>
 							          <p>School of Information Engineering, Ningxia University, Yinchuan, China </p>
 							          <p>My research is on facial analysis and machine learning, particularly face alignment, facial age estimation and deep learning.</p>
 									  <p>Ph.D supervised by Professor <a href="http://www.tsinghua.edu.cn/publish/auen/1713/2011/20110506105532098625469/20110506105532098625469_.html">Jie Zhou</a> and <a href="http://ivg.au.tsinghua.edu.cn/Jiwen_Lu/">Jiwen Lu</a></p>
@@ -227,6 +227,20 @@
 						<li>Excellent Undergraduate Student of Tsinghua University, 2018</li>
 						<li>Outstanding Ph.D. Thesis of Tsinghua University, 2018</li>
 						<li>National Scholarship of Tsinghua University, 2017</li> 
+					</ul>
+				</div>
+			        <div id="prof">
+					<h2>Professional Activities</h2>
+					<ul>
+						<li><b>Reviewer</b>, IEEE Transactions on Pattern Analysis and Machine Intelligence, 2018-.</li>
+						<li><b>Reviewer</b>, IEEE Transactions on Image Processing, 2018-.</li> 
+						<li><b>Reviewer</b>, IEEE Transactions on Circuits and Systems for Video Technology, 2018-.</li> 
+						<li><b>Reviewer</b>, IEEE Transactions on Multimedia, 2018-.</li> 
+						<li><b>Reviewer</b>, IEEE Access, 2018-.</li> 
+						<li><b>Reviewer</b>, Pattern Recognition, 2016-.</li> 
+						<li><b>Reviewer</b>, Journal of Visual Communication and Image Representation, 2017-.</li> 
+						<li><b>Reviewer</b>, IEEE International Conference on Multimedia and Expo, 2018-.</li> 
+						<li><b>Reviewer</b>, IEEE International Conference on Image Processing, 2017-.</li> 
 					</ul>
 				</div>
 			</div>
