--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <ul>
                 <li class="start selected"><a href="#">Home</a></li>
                 <li><a href="#updates">Updates</a></li>
-                <li><a href="#publication">Publication</a></li>
+                <li><a href="#publication">Publications</a></li>
                 <li class="end"><a href="#contacts">Contacts</a></li>
             </ul>
         </div> -->
@@ -95,10 +95,10 @@
 						<br>
 						<li>[2018/12/02] One paper on Face Alignment via Deep Reinforcement Learning is accepted to T-PAMI 2019 (Regular Paper). </li>
 						<br>
-					      <li>[2018/08/20] I give a talk on Deep Metric Learning for Pattern Recognition at the Tutorial of ICPR'18. </li><br>
+					      <li>[2018/08/20] I give a talk on <a href=http://ivg.au.tsinghua.edu.cn/people/Yueqi_Duan/ICPR18_metric.pdf>Deep Metric Learning for Pattern Recognition</a> at the <a href=http://www.icpr2018.org/index.php?m=content&c=index&a=show&catid=47&id=2>Tutorial of ICPR'18</a>. </li><br>
 					      <li>[2018/07/01] I am honored with the Outstanding Ph.D. Thesis of Tsinghua University. </li>
 						<br>
-					      <li>[2018/05/15] I give a talk on Representation Learning for Face Alignment and Recognition at the Tutorial of FG'18. </li><br>
+					      <li>[2018/05/15] I give a talk on <a href=http://ivg.au.tsinghua.edu.cn/people/Yueqi_Duan/FG18_face.pdf>Representation Learning for Face Alignment and Recognition</a> at the <a href=https://fg2018.cse.sc.edu/tutorial.html>Tutorial of FG'18</a>. </li><br>
 					      <li>[2017/10/10] I am honored with the National Scholarship of Tsinghua University. </li>
 						<br>
 					</ul>
