--- a/index.html
+++ b/index.html
@@ -145,8 +145,8 @@
 									<div class="pub-info">
 										<h6>Two-Stream Transformer Networks for Video-based Face Alignment</h6><br>
 										<b>Hao Liu</b>, Jiwen Lu*, Jianjiang Feng and Jie Zhou.<br>
-										<i> IEEE Transactions on Pattern Analysis and Machine Intelligence (T-PAMI) , 2018.</i><br><br> [
-										<a href="paper/tpami2018.pdf">Paper</a>]
+										<i> IEEE Transactions on Pattern Analysis and Machine Intelligence (T-PAMI) , 2018.</i><br><br> 
+											     [<a href="paper/tpami2018.pdf">Paper</a>]
 									</div>
 								</td>
 							</tr>
@@ -159,8 +159,8 @@
 									<div class="pub-info">
 										<h6>Learning Deep Sharable and Structural Detectors for Face Alignment</h6><br>
 										<b>Hao Liu</b>, Jiwen Lu*, Jianjiang Feng, and Jie Zhou.<br>
-										<i> IEEE Transactions on Image Processing (T-IP) , 2017.</i> <br><br> [
-										<a href="paper/2017_Learning deep sharable and structural detectors for face alignment.pdf">Paper</a>]
+										<i> IEEE Transactions on Image Processing (T-IP) , 2017.</i> <br><br> 
+											     [<a href="paper/2017_Learning deep sharable and structural detectors for face alignment.pdf">Paper</a>]
 									</div>
 								</td>
 							</tr>
