--- a/index.html
+++ b/index.html
@@ -239,7 +239,8 @@
 						<li><b>Reviewer</b>, IEEE Access, 2018-.</li> 
 						<li><b>Reviewer</b>, Pattern Recognition, 2016-.</li> 
 						<li><b>Reviewer</b>, Journal of Visual Communication and Image Representation, 2017-.</li> 
-						<li><b>Reviewer</b>, IEEE International Conference on Multimedia and Expo, 2018-.</li> 
+						<li><b>Reviewer</b>, AAAI Conference on Artificial Intelligence, 2018-.</li> 
+					        <li><b>Reviewer</b>, IEEE International Conference on Multimedia and Expo, 2018-.</li> 
 						<li><b>Reviewer</b>, IEEE International Conference on Image Processing, 2017-.</li> 
 					</ul>
 				</div>
