--- a/index.html
+++ b/index.html
@@ -218,6 +218,30 @@
 									</div>
 								</td>
 							</tr>
+							<tr>
+								<td class="col-3">
+									<a href=""><img src="img/NC.png"></a>
+								</td>
+								<td>
+									<div class="pub-info">
+										<h6>Set-Label Modeling and Deep Metric Learning on Person Re-Identification</h6><br>
+										<b>Hao Liu</b>, Bingpeng Ma, Lei Qin*, Junbiao Pang, Chunjie Chen and Qingming Huang. <br>
+										<i> Neurocomputing, 2015.</i> <br><br> [<a href="paper/NC15.pdf">Paper</a>]
+									</div>
+								</td>
+							</tr>
+																		<tr>
+							<td class="col-3">
+									<a href=""><img src="img/ICIP.png"></a>
+								</td>
+								<td>
+									<div class="pub-info">
+										<h6>Set-based Classification for Person Re-Identification Utilizing Mutual-information</h6><br>
+										<b>Hao Liu</b>, Lei Qin*, Zhongwei Cheng and Qingming Huang. <br>
+										<i> IEEE International Conference on Image Processing, 2013.</i> <br><br> [<a href="paper/ICIP13.pdf">Paper</a>]
+									</div>
+								</td>
+							</tr>
 						
 						</tbody>
 					</table>
