--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
 									<div class="pub-info">
 										<h6>Set-based Classification for Person Re-Identification Utilizing Mutual-information</h6><br>
 										<b>Hao Liu</b>, Lei Qin*, Zhongwei Cheng and Qingming Huang. <br>
-										<i> IEEE International Conference on Image Processing, 2013.</i> <br><br> [<a href="paper/ICIP13.pdf">Paper</a>]
+										<i> IEEE International Conference on Image Processing (ICIP), 2013.</i> <br><br> [<a href="paper/ICIP13.pdf">Paper</a>]
 									</div>
 								</td>
 							</tr>
