--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
 									<span style="line-height:30px;">
 							          <p> <font size="4" face="Times">Hao Liu</font>,  Ph.D, Associate Professor </p>
 							          <p>School of Information Engineering, Ningxia University, Yinchuan, China </p>
-							          <p>My research is on facial analysis and machine learning, particularly face alignment, facial age estimation and deep learning.</p>
+							          <p>Research on facial analysis and machine learning, particularly face alignment, facial age estimation and deep learning.</p>
 									  <p>Ph.D supervised by Professor <a href="http://www.tsinghua.edu.cn/publish/auen/1713/2011/20110506105532098625469/20110506105532098625469_.html">Jie Zhou</a> and <a href="http://ivg.au.tsinghua.edu.cn/Jiwen_Lu/">Jiwen Lu</a></p>
-							          <p>Email: <a href="mailto:liuhao@nxu.edu.cn">liuhao [at] nxu.edu.cn</a></p>
+							          <p>Contact Email: <a href="mailto:liuhao@nxu.edu.cn">liuhao [at] nxu.edu.cn</a></p>
 							        </span>
 								</td>
 								<td class="col-3">
@@ -70,13 +70,13 @@
 				        <div class="col-lg-4">
 				          <center>
 				            <img src="img/tsinghua.png"  width="100">
-							<p> <font size="4" face="Times">Sep. 2014 - Jan. 2018</font>, Ph.D Degree of Automation, <font size="4" face="Times">Tsinghua University</font> </p>
+							<p> <font size="4" face="Times">Sep. 2014 - Jan. 2018</font>, Ph.D Degree of Control Science and Engineering, <font size="4" face="Times">Tsinghua University</font> </p>
 				          </center>
 				        </div>
 				        <div class="col-lg-4">
 				          <center>
 				            <img src="img/ucas.jpg"  width="100">
-							<p> <font size="4" face="Times">Sep. 2011 - Jul. 2014</font>, Master Degree of Computer Science and Control, <font size="4" face="Times">University of Chinese Academic of Sciences </font></p>
+							<p> <font size="4" face="Times">Sep. 2011 - Jul. 2014</font>, Engineering Master Degree of Computer Technology, <font size="4" face="Times">University of Chinese Academic of Sciences </font></p>
 				          </center>
 				        </div>
 						<div class="col-lg-4">
@@ -105,7 +105,7 @@
 				</div>
 
 				<div id="publication">
-					<h2>Publication</h2>
+					<h2>Publications</h2>
 					<table class="table-pub">
 						<tbody>
 						        <tr>
