--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
 							          <p>School of Information Engineering, Ningxia University, Yinchuan, China </p>
 							          <p>Research on facial analysis and machine learning, particularly face alignment, facial age estimation and deep learning.</p>
 									  <p>Ph.D supervised by Professor <a href="http://www.tsinghua.edu.cn/publish/auen/1713/2011/20110506105532098625469/20110506105532098625469_.html">Jie Zhou</a> and <a href="http://ivg.au.tsinghua.edu.cn/Jiwen_Lu/">Jiwen Lu</a></p>
-							          <p>Contact Email: <a href="mailto:liuhao@nxu.edu.cn">liuhao [at] nxu.edu.cn</a></p>
+							                  <p>Master supervised by Professor <a href="http://people.ucas.ac.cn/~0003060?language=en">Qingming Huang</a></p>
+								  <p>Contact Email: <a href="mailto:liuhao@nxu.edu.cn">liuhao [at] nxu.edu.cn</a></p>
 							        </span>
 								</td>
 								<td class="col-3">
@@ -143,7 +144,7 @@
 								<td>
 									<div class="pub-info">
 										<h6>Ordinal Deep Learning for Facial Age Estimation</h6><br>
-										<b>Hao Liu</b>, Jiwen Lu*, Jianjiang Feng, and Jie Zhou.<br>
+										<b>Hao Liu</b>, Jiwen Lu*, Jianjiang Feng and Jie Zhou.<br>
 										<i> IEEE Transactions on Circuits and Systems for Video Technology (T-CSVT), 2019.</i> <br><br> [<a href="paper/TCSVT2019.pdf">Paper</a>]
 									</div>
 								</td>
@@ -172,7 +173,7 @@
 								<td>
 									<div class="pub-info">
 										<h6>Label-Sensitive Deep Metric Learning for Facial Age Estimation</h6><br>
-										<b>Hao Liu</b>, Jiwen Lu*, Jianjiang Feng, and Jie Zhou.<br>
+										<b>Hao Liu</b>, Jiwen Lu*, Jianjiang Feng and Jie Zhou.<br>
 										<i> IEEE Transactions on Information Forensics and Security (T-IFS), 2018.</i> <br><br> [<a href="paper/TIFS18.pdf">Paper</a>]
 									</div>
 								</td>
@@ -185,7 +186,7 @@
 								<td>
 									<div class="pub-info">
 										<h6>Learning Deep Sharable and Structural Detectors for Face Alignment</h6><br>
-										<b>Hao Liu</b>, Jiwen Lu*, Jianjiang Feng, and Jie Zhou.<br>
+										<b>Hao Liu</b>, Jiwen Lu*, Jianjiang Feng and Jie Zhou.<br>
 										<i> IEEE Transactions on Image Processing (T-IP) , 2017.</i> <br><br> 
 											     [<a href="paper/2017_Learning deep sharable and structural detectors for face alignment.pdf">Paper</a>]
 									</div>
@@ -199,7 +200,7 @@
 								<td>
 									<div class="pub-info">
 										<h6>Group-Aware Deep Feature Learning for Facial Age Estimation</h6><br>
-										<b>Hao Liu</b>, Jiwen Lu*, Jianjiang Feng, and Jie Zhou.<br>
+										<b>Hao Liu</b>, Jiwen Lu*, Jianjiang Feng and Jie Zhou.<br>
 										<i> Pattern Recognition (PR), 2017.</i> <br><br> 
 										[<a href="paper/PR17.pdf">Paper</a>]
 									</div>
@@ -213,7 +214,7 @@
 								<td>
 									<div class="pub-info">
 										<h6>Ordinal Deep Feature Learning for Facial Age Estimation</h6><br>
-										<b>Hao Liu</b>, Jiwen Lu*, Jianjiang Feng, and Jie Zhou.<br>
+										<b>Hao Liu</b>, Jiwen Lu*, Jianjiang Feng and Jie Zhou.<br>
 										<i> IEEE International Conference on Automatic Face and Gesture Recognition (FG), 2017.</i> <br><br> [<a href="paper/FG17.pdf">Paper</a>]
 									</div>
 								</td>
