--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
 							          <p> <font size="4" face="Times">Hao Liu</font>,  Ph.D, Associate Professor </p>
 							          <p>School of Information Engineering, Ningxia University, Yinchuan, China </p>
 							          <p>Research on facial analysis and machine learning, particularly face alignment, facial age estimation and deep learning.</p>
-									  <p>Ph.D supervised by Professor <a href="http://www.tsinghua.edu.cn/publish/auen/1713/2011/20110506105532098625469/20110506105532098625469_.html">Jie Zhou</a> and <a href="http://ivg.au.tsinghua.edu.cn/Jiwen_Lu/">Jiwen Lu</a></p>
-							                  <p>Master supervised by Professor <a href="http://people.ucas.ac.cn/~0003060?language=en">Qingming Huang</a></p>
+									  <p>Ph.D supervised by Professor <a href="http://www.tsinghua.edu.cn/publish/auen/1713/2011/20110506105532098625469/20110506105532098625469_.html">Jie Zhou</a> and <a href="http://ivg.au.tsinghua.edu.cn/Jiwen_Lu/">Jiwen Lu</a>.</p>
+							                  <p>Master supervised by Professor <a href="http://people.ucas.ac.cn/~0003060?language=en">Qingming Huang</a>.</p>
 								  <p>Contact Email: <a href="mailto:liuhao@nxu.edu.cn">liuhao [at] nxu.edu.cn</a></p>
 							        </span>
 								</td>
