--- a/index.html
+++ b/index.html
@@ -92,9 +92,9 @@
 					<h2>News</h2>
 					<br>
 					<ul>
-					      <li>[2019/03/11] One paper on Facial Age Estimation via Deep Adversarial Learning is accepted to ICME 2019 (Oral Presentation). </li>
+					      <li>[2019/03/11] One paper on facial age estimation is accepted to ICME 2019 as Oral Presentation. </li>
 						<br>
-						<li>[2018/12/02] One paper on Face Alignment via Deep Reinforcement Learning is accepted to T-PAMI 2019 (Regular Paper). </li>
+						<li>[2018/12/02] One paper on face alignment is accepted to T-PAMI 2019 as Regular Paper. </li>
 						<br>
 					      <li>[2018/08/20] I give a talk on <a href=http://ivg.au.tsinghua.edu.cn/people/Yueqi_Duan/ICPR18_metric.pdf>Deep Metric Learning for Pattern Recognition</a> at the <a href=http://www.icpr2018.org/index.php?m=content&c=index&a=show&catid=47&id=2>Tutorial of ICPR'18</a>. </li><br>
 					      <li>[2018/07/01] I am honored with the Outstanding Ph.D. Thesis of Tsinghua University. </li>
