--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 									<div class="pub-info">
 										<h6>Ordinal Deep Learning for Facial Age Estimation</h6><br>
 										<b>Hao Liu</b>, Jiwen Lu*, Jianjiang Feng and Jie Zhou.<br>
-										<i> IEEE Transactions on Circuits and Systems for Video Technology (T-CSVT), 2019.</i> <br><br> [<a href="paper/TCSVT2019.pdf">Paper</a>]
+										<i> IEEE Transactions on Circuits and Systems for Video Technology (T-CSVT), 29(2): 486-501, 2019.</i> <br><br> [<a href="paper/TCSVT2019.pdf">Paper</a>]
 									</div>
 								</td>
 							</tr>
@@ -158,7 +158,7 @@
 									<div class="pub-info">
 										<h6>Two-Stream Transformer Networks for Video-based Face Alignment</h6><br>
 										<b>Hao Liu</b>, Jiwen Lu*, Jianjiang Feng and Jie Zhou.<br>
-										<i> IEEE Transactions on Pattern Analysis and Machine Intelligence (T-PAMI) , 2018.</i><br><br> 
+										<i> IEEE Transactions on Pattern Analysis and Machine Intelligence (T-PAMI) , 40(11): 2546-2554, 2018.</i><br><br> 
 											     [<a href="paper/TPAMI2018.pdf">Paper</a>]
 									</div>
 								</td>
@@ -174,7 +174,7 @@
 									<div class="pub-info">
 										<h6>Label-Sensitive Deep Metric Learning for Facial Age Estimation</h6><br>
 										<b>Hao Liu</b>, Jiwen Lu*, Jianjiang Feng and Jie Zhou.<br>
-										<i> IEEE Transactions on Information Forensics and Security (T-IFS), 2018.</i> <br><br> [<a href="paper/TIFS18.pdf">Paper</a>]
+										<i> IEEE Transactions on Information Forensics and Security (T-IFS), 13(2): 292-305, 2018.</i> <br><br> [<a href="paper/TIFS18.pdf">Paper</a>]
 									</div>
 								</td>
 							</tr>
@@ -187,7 +187,7 @@
 									<div class="pub-info">
 										<h6>Learning Deep Sharable and Structural Detectors for Face Alignment</h6><br>
 										<b>Hao Liu</b>, Jiwen Lu*, Jianjiang Feng and Jie Zhou.<br>
-										<i> IEEE Transactions on Image Processing (T-IP) , 2017.</i> <br><br> 
+										<i> IEEE Transactions on Image Processing (T-IP) , 26(4): 1666-1678, 2017.</i> <br><br> 
 											     [<a href="paper/2017_Learning deep sharable and structural detectors for face alignment.pdf">Paper</a>]
 									</div>
 								</td>
@@ -201,7 +201,7 @@
 									<div class="pub-info">
 										<h6>Group-Aware Deep Feature Learning for Facial Age Estimation</h6><br>
 										<b>Hao Liu</b>, Jiwen Lu*, Jianjiang Feng and Jie Zhou.<br>
-										<i> Pattern Recognition (PR), 2017.</i> <br><br> 
+										<i> Pattern Recognition (PR), 66: 82-94, 2017.</i> <br><br> 
 										[<a href="paper/PR17.pdf">Paper</a>]
 									</div>
 								</td>
@@ -215,7 +215,7 @@
 									<div class="pub-info">
 										<h6>Ordinal Deep Feature Learning for Facial Age Estimation</h6><br>
 										<b>Hao Liu</b>, Jiwen Lu*, Jianjiang Feng and Jie Zhou.<br>
-										<i> IEEE International Conference on Automatic Face and Gesture Recognition (FG), 2017.</i> <br><br> [<a href="paper/FG17.pdf">Paper</a>]
+										<i> IEEE International Conference on Automatic Face and Gesture Recognition (FG 2017), 157-164.</i> <br><br> [<a href="paper/FG17.pdf">Paper</a>]
 									</div>
 								</td>
 							</tr>
@@ -227,7 +227,7 @@
 									<div class="pub-info">
 										<h6>Set-Label Modeling and Deep Metric Learning on Person Re-Identification</h6><br>
 										<b>Hao Liu</b>, Bingpeng Ma, Lei Qin*, Junbiao Pang, Chunjie Chen and Qingming Huang. <br>
-										<i> Neurocomputing, 2015.</i> <br><br> [<a href="paper/NC15.pdf">Paper</a>]
+										<i> Neurocomputing, 151: 1283-1292, 2015.</i> <br><br> [<a href="paper/NC15.pdf">Paper</a>]
 									</div>
 								</td>
 							</tr>
@@ -239,7 +239,7 @@
 									<div class="pub-info">
 										<h6>Set-based Classification for Person Re-Identification Utilizing Mutual-information</h6><br>
 										<b>Hao Liu</b>, Lei Qin*, Zhongwei Cheng and Qingming Huang. <br>
-										<i> IEEE International Conference on Image Processing (ICIP), 2013.</i> <br><br> [<a href="paper/ICIP13.pdf">Paper</a>]
+										<i> IEEE International Conference on Image Processing (ICIP 2013), 3078-3082.</i> <br><br> [<a href="paper/ICIP13.pdf">Paper</a>]
 									</div>
 								</td>
 							</tr>
