--- a/index.html
+++ b/index.html
@@ -94,6 +94,8 @@
 					<ul>
 					      <li>[2019/03/11] One paper on facial age estimation is accepted to ICME 2019 as Oral Presentation. </li>
 						<br>
+					      <li>[2018/12/31] I serve as the associate professor in Ningxia University. </li>
+						<br>
 						<li>[2018/12/02] One paper on face alignment is accepted to T-PAMI 2019 as Regular Paper. </li>
 						<br>
 					      <li>[2018/08/20] I give a talk on <a href=http://ivg.au.tsinghua.edu.cn/people/Yueqi_Duan/ICPR18_metric.pdf>Deep Metric Learning for Pattern Recognition</a> at the <a href=http://www.icpr2018.org/index.php?m=content&c=index&a=show&catid=47&id=2>Tutorial of ICPR'18</a>. </li><br>
