--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 									<div class="pub-info">
 										<h6>Similarity-Aware Deep Adversarial Learning for Facial Age Estimation</h6><br>
 										Penghui Sun, <span><b>Hao Liu</b><span>*, Xin Wang, Zhenhua Yu and Suping Wu.<br>
-                                <i>IEEE International Conference on Multimedia and Expo (ICME), Oral Presentation 2019.</i><br>
+                                <i>IEEE International Conference on Multimedia and Expo (ICME 2019), Oral Presentation.</i><br>
                                 [<a href="">In Press</a>]
                             </span></span>
 									</div>
