--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
 		</div>
 		<div class="jvectormap-tip"></div>
 		<script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
-		<span id="busuanzi_container_site_pv" >| Visitor Hints:  <span id="busuanzi_value_site_pv"></span>  | </span>
+		<span id="busuanzi_container_site_pv" >| Visitors' Hits:  <span id="busuanzi_value_site_pv"></span>  | </span>
 
 	</body>
 
