--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 										<h6>Learning Reasoning-Decision Networks for Robust Face Alignment</h6><br>
 										<span><b>Hao Liu</b>, <span>Jiwen Lu*, Minghao Guo, Suping Wu and Jie Zhou.<br>
                                 <i>IEEE Transactions on Pattern Analysis and Machine Intelligence (T-PAMI) , 2019.</i><br>
-                                [<a href="">In Press</a>]
+                                [<a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=8570839">PDF</a>]  [<a href="https://github.com/HaoLiuPhd/RDN-master">Code</a>]
                             </span></span>
 									</div>
 								</td>
