--- a/index.html
+++ b/index.html
@@ -92,11 +92,11 @@
 					<h2>News</h2>
 					<br>
 					<ul>
-					      <li>[2019/03/11] One paper on facial age estimation is accepted to ICME 2019 as Oral Presentation. </li>
+					      <li>[2019/03/11] One paper on facial age estimation is accepted to <a href=http://www.icme2019.org/>ICME 2019</a> as Oral Presentation. </li>
 						<br>
-					      <li>[2018/12/31] I serve as the associate professor in Ningxia University. </li>
+					      <li>[2018/12/31] I serve as the Associate Professor in <a href=https://xxgc.nxu.edu.cn/info/1231/3006.htm>Ningxia University</a>. </li>
 						<br>
-						<li>[2018/12/02] One paper on face alignment is accepted to T-PAMI as Regular Paper. </li>
+						<li>[2018/12/02] One paper on face alignment is accepted to <a href=https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=34>T-PAMI</a> as Regular Paper. </li>
 						<br>
 					      <li>[2018/08/20] I give a talk on <a href=http://ivg.au.tsinghua.edu.cn/people/Yueqi_Duan/ICPR18_metric.pdf>Deep Metric Learning for Pattern Recognition</a> at the <a href=http://www.icpr2018.org/index.php?m=content&c=index&a=show&catid=47&id=2>Tutorial of ICPR'18</a>. </li><br>
 					      <li>[2018/07/01] I am honored with the Outstanding Ph.D. Thesis of Tsinghua University. </li>
