--- a/index.html
+++ b/index.html
@@ -99,10 +99,12 @@
 						<li>[2018/12/02] One paper on face alignment is accepted to <a href=https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=34>T-PAMI</a> as Regular Paper. </li>
 						<br>
 					      <li>[2018/08/20] I give a talk on <a href=http://ivg.au.tsinghua.edu.cn/people/Yueqi_Duan/ICPR18_metric.pdf>Deep Metric Learning for Pattern Recognition</a> at the <a href=http://www.icpr2018.org/index.php?m=content&c=index&a=show&catid=47&id=2>Tutorial of ICPR'18</a>. </li><br>
-					      <li>[2018/07/01] I am honored with the Outstanding Ph.D. Thesis of Tsinghua University. </li>
-						<br>
+					      <li>[2018/07/01] I am honored with the Outstanding Ph.D. Thesis of Tsinghua University. </li><br>
 					      <li>[2018/05/15] I give a talk on <a href=http://ivg.au.tsinghua.edu.cn/people/Yueqi_Duan/FG18_face.pdf>Representation Learning for Face Alignment and Recognition</a> at the <a href=https://fg2018.cse.sc.edu/tutorial.html>Tutorial of FG'18</a>. </li><br>
-					      <li>[2017/10/10] I am honored with the National Scholarship of Tsinghua University. </li>
+					      <li>[2018/12/21] One paper on facial age estimation is accepted to <a href=https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=76>T-CSVT</a> as Regular Paper. </li>
+						<br>
+					      <li>[2017/10/10] I am honored with the National Scholarship of Tsinghua University. </li><br>
+					      <li>[2018/12/02] One paper on video-based face alignment is accepted to <a href=https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=34>T-PAMI</a> as Regular Paper. </li>
 						<br>
 					</ul>
 				</div>
