--- a/index.html
+++ b/index.html
@@ -104,7 +104,11 @@
 					      <li>[2018/12/21] One paper on facial age estimation is accepted to <a href=https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=76>IEEE T-CSVT</a> as Regular Paper. </li>
 						<br>
 					      <li>[2017/10/10] I am honored with the National Scholarship of Tsinghua University. </li><br>
-					      <li>[2018/12/02] One paper on video-based face alignment is accepted to <a href=https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=34>IEEE T-PAMI</a> as Regular Paper. </li>
+					      <li>[2017/08/21] One paper on facial age estimation is accepted to <a href=https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=10206>IEEE T-IFS</a> as Regular Paper. </li>
+						<br>
+					      <li>[2017/07/28] One paper on video-based face alignment is accepted to <a href=https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=34>IEEE T-PAMI</a> as Regular Paper. </li>
+						<br>
+					      <li>[2017/01/19] One paper on face alignment is accepted to <a href=https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=83>IEEE T-IP</a> as Regular Paper. </li>
 						<br>
 					</ul>
 				</div>
