--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 									<div class="pub-info">
 										<h6>Learning Reasoning-Decision Networks for Robust Face Alignment</h6><br>
 										<span><b>Hao Liu</b>, <span>Jiwen Lu*, Minghao Guo, Suping Wu and Jie Zhou.<br>
-                                <i>IEEE Transactions on Pattern Analysis and Machine Intelligence (<b>T-PAMI</b>) , 2019.</i><br>
+                                <i>IEEE Transactions on Pattern Analysis and Machine Intelligence (<b>T-PAMI</b>) , accepted.</i><br>
                                 [<a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=8570839">Paper</a>]  [<a href="https://github.com/HaoLiuPhd/RDN-master">Code</a>]
                             </span></span>
 									</div>
