--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 								<td class="col-7">
 									<span style="line-height:30px;">
 							          <p> <font size="4" face="Times">Hao Liu</font>,  Ph.D, Associate Professor </p>
-							          <p>School of Information Engineering, Ningxia University, Yinchuan, China </p>
+							          <p>School of Information Engineering, Ningxia University (NXU), Yinchuan, China </p>
 							          <p>Research on facial analysis and machine learning, particularly face alignment, facial age estimation, deep metric learning and deep reinforcement learning.</p>
 									  <p>Ph.D supervised by Professor <a href="http://www.tsinghua.edu.cn/publish/auen/1713/2011/20110506105532098625469/20110506105532098625469_.html">Jie Zhou</a> and Professor <a href="http://ivg.au.tsinghua.edu.cn/Jiwen_Lu/">Jiwen Lu</a>.</p>
 							                  <p>Master supervised by Professor <a href="http://people.ucas.ac.cn/~0003060?language=en">Qingming Huang</a>.</p>
